fix(auth): derive offline identity case-insensitively after name validation